--- a/templates/secrets-bridge-server/0/docker-compose.yml
+++ b/templates/secrets-bridge-server/0/docker-compose.yml
@@ -6,4 +6,4 @@ secrets-bridge:
         CATTLE_URL
         VAULT_TOKEN
         VAULT_CUBBYPATH
-    commmand: server --vault-url ${VAULT_URL}
+    command: server --vault-url ${VAULT_URL}
