--- a/templates/secrets-bridge-agents/0/rancher-compose.yml
+++ b/templates/secrets-bridge-agents/0/rancher-compose.yml
@@ -4,33 +4,8 @@
     description: |
        Agent side of secrets bridge between Rancher and Vault
     questions:
-        - variable: CATTLE_URL
+        - variable: BRIDGE_URL
           type: string
-          label: "Cattle URL"
+          label: "Secrets Bridge URL"
           required: true
-          description: "URL to the Cattle Project this service is managing"
-        - variable: CATTLE_ACCESS_KEY
-          type: string
-          label: "Cattle Access Key"
-          required: true
-          description: "Cattle Access API Key"
-        - variable: CATTLE_SECRET_KEY
-          type: password
-          label: "Cattle Secret Key"
-          required: true
-          description: "Cattle Secret API Key"
-        - variable: VAULT_TOKEN
-          type: password
-          label: "Vault Temp Token"
-          required: true
-          description: "Temporary Token to Access Vault Cubbyhole"
-        - variable: VAULT_URL
-          type: string
-          label: "URL to Vault server"
-          required: true
-          description: "URL to the Vault server"
-        - variable: VAULT_CUBBYPATH
-          type: string
-          label: "Vault Cubbyhole Path"
-          required: true
-          description: "Path to get the permenant API key"
+          description: "Should be the http(s)://address:port version of the url"
