--- a/templates/secrets-bridge-agents/0/docker-compose.yml
+++ b/templates/secrets-bridge-agents/0/docker-compose.yml
@@ -1,6 +1,9 @@
 secrets-bridge:
     image: rancher/secrets-bridge:v0.0.1-1
     command: agent --bridge-url ${BRIDGE_URL}
+    volumes:
+        - /var/run/docker.sock:/var/run/docker.sock
+    privileged: true
     labels:
         io.rancher.container.create_agent: true
         io.rancher.container.agent.role: agent
