--- a/templates/secrets-bridge-server/0/docker-compose.yml
+++ b/templates/secrets-bridge-server/0/docker-compose.yml
@@ -1,5 +1,5 @@
 secrets-bridge:
-    image: rancher/secrets-bridge:v0.0.1-1
+    image: cloudnautique/secrets-bridge:v0.0.2
     environment:
         CATTLE_ACCESS_KEY: ${CATTLE_ACCESS_KEY}
         CATTLE_SECRET_KEY: ${CATTLE_SECRET_KEY}
